--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ stepcarousel.setup({
 <div class="videopost">
 
 
-				   				   				   				   				   				   <a href="https://itunes.apple.com/subscribe?app=music">
+				   				   				   				   				   				   <a href="https://itunes.apple.com/subscribe?app=music&at=1001lNL9">
 <IMG SRC="appleMusic1.png" ALT="Apple Music"></a> 
 
 </div>
