--- a/index.html
+++ b/index.html
@@ -776,13 +776,13 @@ stepcarousel.setup({
 </div>
 <div id="rightcol">
 
-<!-- <div class="videopost">
+<div class="videopost">
 
 
-				   				   				   				   				   				   <a href="https://itunes.apple.com/subscribe?app=music&at=qqwweerr">
+				   				   				   				   				   				   <a href="https://itunes.apple.com/subscribe?app=music&at=1001lPAm">
 <IMG SRC="appleMusic1.png" ALT="Apple Music"></a> 
 
-</div> -->
+</div>
 
 <div class="videopost">
 
