--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@ stepcarousel.setup({
 
 
 </div>
-Designed by <a href="#">Midnight Publishing</a>
+Contacts: fymax@outlook.com
 <!-- Powered by WPtouch: 4.3.21 --><script type='text/javascript'>
 /* <![CDATA[ */
 var thickboxL10n = {"next":"Next >","prev":"< Prev","image":"Image","of":"of","close":"Close","noiframes":"This feature requires inline frames. You have iframes disabled or your browser does not support them.","loadingAnimation":"https:\/\/www.musictool.ml\/wp-includes\/js\/thickbox\/loadingAnimation.gif"};
